--- a/api-rest/pom.xml
+++ b/api-rest/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.skaihen</groupId>
-	<artifactId>proyecto-master-java-final</artifactId>
+	<artifactId>api-rest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>proyecto-master-java-final</name>
+	<name>api-rest</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
