--- a/api-rest/src/main/resources/application.properties
+++ b/api-rest/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.datasource.url=jdbc:mariadb://localhost:3306/cursosdb
+spring.datasource.username=admin_dev
+# No se debe poner la contraseña directamente aquí, o al menos no subirla a un repositorio. En este caso es de prueba.
+spring.datasource.password=123456.654321
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto = update
