--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "java.compile.nullAnalysis.mode": "automatic"
+  "java.compile.nullAnalysis.mode": "automatic",
+  "docwriter.hotkey.windows": "Alt + .",
+  "docwriter.progress.trackClasses": false,
+  "docwriter.progress.trackTypes": false,
+  "docwriter.language": "Spanish"
 }
