--- a/api-rest/src/main/resources/application.properties
+++ b/api-rest/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-
-spring.datasource.url=jdbc:mariadb://localhost:3306/pokemondb
+spring.datasource.url=jdbc:mariadb://localhost:3306/animaldb
 spring.datasource.username=admin_dev
 # No se debe poner la contraseña directamente aquí, o al menos no nuevola a un repositorio. En este caso es de prueba.
 spring.datasource.password=123456.654321
